server package quality of code fixes