@@ -1,94 +1,74 @@
 package service;
 
-import dataaccess.*;
+import dataaccess.UserDAO;
+import dataaccess.AuthDAO;
 import dataaccess.exceptions.*;
-
 import model.UserData;
 import requests.AuthResult;
 
 import java.util.Objects;
 
-public class UserService
-{
+public class UserService {
 
-    private final UserDAO userDAO;
-    private final AuthService authService;
+    private final UserDAO users;
+    private final AuthService auth;
 
-
-    public UserService(UserDAO userDAO, AuthDAO authDAO)
-    {
-        this.userDAO = Objects.requireNonNull(userDAO);
-        this.authService = new AuthService(authDAO);
-
+    public UserService(UserDAO users, AuthDAO authDAO) {
+        this.users = Objects.requireNonNull(users);
+        this.auth = new AuthService(authDAO);
     }
 
-    // --- Public API ---
-
-    public void clear() throws DataAccessException
-    {
-        userDAO.clear();
+    public void clear() throws DataAccessException {
+        users.clear();
     }
 
     public AuthResult register(String username, String password, String email)
             throws DataAccessException, AlreadyTakenException, MissingFieldException {
-        validateInput(username, password);
-        ensureUserDoesNotExist(username);
-        UserData newUser = new UserData(username, password, email);
-        userDAO.save(newUser);
-        return issueToken(username);
+
+        requireValidCredentials(username, password);
+
+        if (users.findByUsername(username) != null) {
+            throw new AlreadyTakenException("Error: Username already in use");
+        }
+
+        users.save(new UserData(username, password, email));
+
+        return issue(username);
     }
 
     public AuthResult login(String username, String password)
-            throws DataAccessException, InvalidCredentialsException, UserNotAuthenticatedException
-    {
+            throws DataAccessException,
+            InvalidCredentialsException,
+            UserNotAuthenticatedException {
 
-        validateInput(username, password);
-        UserData existing = userDAO.findByUsername(username);
-        if (existing == null)
-        {
-            throw new UserNotAuthenticatedException("Error: User not registered."); // 403
+        requireValidCredentials(username, password);
+
+        UserData existing = users.findByUsername(username);
+        if (existing == null) {
+            throw new UserNotAuthenticatedException("Error: User not registered.");
         }
-        authenticateUser(username, password);
 
-        return issueToken(username);
+        if (!users.validateCredentials(username, password)) {
+            throw new InvalidCredentialsException("Error: Invalid username or password");
+        }
+
+        return issue(username);
     }
 
-    // --- Private Helpers ---
+    // ---------------- helpers ----------------
 
-    private void validateInput(String username, String password) throws MissingFieldException
-    {
-        if (isBlank(username) || isBlank(password))
-        {
-            throw new MissingFieldException("Error: Username and password are required"); // 400
-        }
-    }
-
-    private void ensureUserDoesNotExist(String username) throws AlreadyTakenException, DataAccessException
-    {
-        UserData existing = userDAO.findByUsername(username);
-        if (existing != null)
-        {
-            throw new AlreadyTakenException("Error: Username already in use"); // 403
+    private void requireValidCredentials(String u, String p) throws MissingFieldException {
+        if (isBlank(u) || isBlank(p)) {
+            throw new MissingFieldException("Error: Username and password required");
         }
     }
 
-    private void authenticateUser(String username, String password) throws InvalidCredentialsException, DataAccessException
-    {
-        boolean valid = userDAO.validateCredentials(username, password);
-        if (!valid)
-        {
-            throw new InvalidCredentialsException("Error: Invalid username or password"); // 401
-        }
-    }
-
-    private AuthResult issueToken(String username) throws DataAccessException
-    {
-        String token = authService.generateToken(username);
+    private AuthResult issue(String username) throws DataAccessException {
+        String token = auth.generateToken(username);
         return new AuthResult(username, token);
     }
 
-    private boolean isBlank(String value)
-    {
-        return value == null || value.isBlank();
+    private boolean isBlank(String s) {
+        return s == null || s.trim().isEmpty();
     }
 }
